# es_ml1m

./: Dockerfile  docker-compose.yml  pyproject.toml
config/: kibana.yml
