[tool.poetry]
name = "ml1m_descriptions_ja"
version = "0.1.0"
description = ""
authors = ["Yusuke Matsuyama"]


[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
pandas = "0.25.3"
pandas-gbq = "0.13.1"
numpy = "1.17.4"
scipy = "1.3.3"
metaflow = "*"

python = "==3.7.6"
SPARQLWrapper = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
poetry = 'poetry.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
 
